# tiktok-comment-scrapper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
tests/: test_exporter.py  test_models.py  test_utils.py
tiktok_exporter/: __init__.py  cli.py  client.py  exporter.py  models.py  utils.py
