[project]
name = "tiktok-comments-exporter"
version = "1.0.0"
description = "CLI para exportar comentarios publicos de videos do TikTok em JSON."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Servico" }
]
dependencies = [
    "click==8.1.8",
    "requests==2.31.0",
    "openpyxl==3.1.5"
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2"
]

[project.scripts]
tiktok-comments-exporter = "tiktok_exporter.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
